# retro-console

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  NOTES.md  README.md  backup.md  pyproject.toml  retro_console.toml.example  sound_debugging.md
.claude/: settings.local.json
config/: gamecontroller.amgp  gamecontroller_p2.amgp  install.sh
config/systemd/: antimicrox.service  retro-console.service
design/: two_players.md
docs/: Makefile  conf.py  console_manager.rst  deploy.sh  game_developer.rst  index.rst  operator.rst  sound_designer.rst  sound_directory.rst
games/beast/: pyproject.toml
games/beast/beast/: __init__.py  board.py
games/beast/beast/agents/: beast.py  block.py  manager.py  player.py
games/blackjack/: pyproject.toml
games/blackjack/blackjack/: __init__.py
games/fruit-catcher/: .commit_template  .gitignore  arrowkeyagent.py  class Agent source.py  class Game source.py  graph_demo.py  nav.py  pyproject.toml  snake.py
games/fruit-catcher/fruit_catcher/: catcher.py  fruit.py  game.py  manager.py
games/fruit-catcher/tetris/: block.py  game.py  manager.py  piece.py  proposal.md  pyproject.toml
games/snake/: pyproject.toml
games/snake/snake/: __init__.py  apple.py  snake.py
games/star-catcher/: pyproject.toml
games/star-catcher/src/star_catcher/: __init__.py  game.py
sounds/: bounce.mid  explode.mid  generate.py  hit_large.mid  hit_medium.mid  hit_small.mid  jump.mid  light_hit.mid  lose_a_life.mid  move.mid  parry.mid  select.mid  shoot_large.mid  shoot_medium.mid  shoot_small.mid  start_game.mid  success_large.mid  success_medium.mid  success_small.mid  theme_song.mid
src/retro_console/: __init__.py  banned_words.txt  game_manager.py  input_handler.py  logging_setup.py  main.py  models.py  settings.py  sound_manager.py
src/retro_console/screens/: __init__.py  base.py  game_select.py  high_score.py  splash.py
