[project]
name = "retro-console"
version = "0.1.0"
description = "A retro-style video game console menu system for the terminal"
authors = [
    {name = "Chris Proctor", email = "chris@chrisproctor.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blessed>=1.20.0",
    "sqlalchemy>=2.0.0",
    "tomli>=2.0.0",
]

[project.scripts]
retro-console = "retro_console.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "retro_console", from = "src"}]
