[project]
name = "Beast"
version = "0.1.0"
description = "Catch falling stars before they hit the ground!"
requires-python = ">=3.10,<4.0"
dependencies = [
    "retro-games>=1.0.0",
]

[project.scripts]
play = "beast:main"

[tool.retro]
author = "Chris"
description = "Push blocks to squish the beasties. Don't let them catch you!"
instructions = "Use the arrow keys to push blocks. Squish beasts between blocks."
result_file = "result.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
