[project]
name = "blackjack"
version = "0.1.0"
description = "Classic casino blackjack"
requires-python = ">=3.10,<4.0"
dependencies = [
    "blessed>=1.20.0",
]

[project.scripts]
play = "blackjack:main"

[tool.retro]
name = "Blackjack"
author = "Claude"
description = "Beat the dealer to 21. Start with $100, win or lose $10 per hand."
instructions = "Left/Right to choose action, A or Enter to confirm."
result_file = "result.json"
single_player = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
